--- a/src/main/webapp/WEB-INF/views/memcahe.vm
+++ b/src/main/webapp/WEB-INF/views/memcahe.vm
@@ -5,7 +5,7 @@
         <title>velocity</title>
     </head>
 	<body >
-	 The memcached is ${name}
+	 My memcached test : ${name}
 	 <div><a href="">返回</a></div>
 
     </body>
